# python-package-template

./: README.md  cookiecutter.json  pyproject.toml
.github/workflows/: build.yml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: .pre-commit-config.yaml  Makefile  pyproject.toml  tox.ini
